Fix overflow wrapping of links

--- a/static/assets/base.css
+++ b/static/assets/base.css
@@ -93,6 +93,10 @@ a {
   text-underline-offset: 2px;
 }
 
+main article.page-body a {
+  overflow-wrap: break-word;
+}
+
 a:hover {
   text-decoration-thickness: 3px;
 }
